--- a/AgentStyles.ipynb
+++ b/AgentStyles.ipynb
@@ -1564,7 +1564,7 @@
         "id": "qnQ1F3v7R4Ee"
       },
       "source": [
-        "# **5. Multi-Agent PatStyle**\n",
+        "# **5. Multi-Agent Style**\n",
         "\n",
         "<img src=\"https://blog.langchain.dev/content/images/2024/01/simple_multi_agent_diagram--1-.png\" width=\"500\" alt=\"Reflection Image\">"
       ]
