--- a/Agents_Styles.ipynb
+++ b/Agents_Styles.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "import os\n",
     "from google import genai\n",
-    "client = genai.Client(api_key=\"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\")\n",
+    "client = genai.Client(api_key=\"\")\n",
     "\n",
     "def reflect_and_improve(prompt, model=\"gemini-2.0-flash\"):\n",
     "    # Generate initial response\n",
@@ -305,11 +305,11 @@
    },
    "outputs": [],
    "source": [
-    "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\"\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = \"yourapikey\"\n",
     "\n",
     "llm_config = {\n",
     "    \"model\": \"gemini-1.5-pro\",  # Specify your desired Gemini model\n",
-    "    \"api_key\": \"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\",  # Optional if using default authentication\n",
+    "    \"api_key\": \"yourapikey\",  # Optional if using default authentication\n",
     "    \"api_type\": \"google\"\n",
     "}\n",
     "\n",
@@ -529,7 +529,7 @@
     "from serpapi.google_search import GoogleSearch\n",
     "\n",
     "# Initialize Google's Gemini client\n",
-    "client = genai.Client(api_key=\"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\")\n",
+    "client = genai.Client(api_key=\"yourapikey\")\n",
     "\n",
     "# Initialize SerpApi client\n",
     "serpapi_client = GoogleSearch({\"api_key\": \"f6b0fbed4e432ed75e5f7f9bc039ea76ef8762448b06200c0777e93bb7304e48\"})"
@@ -692,11 +692,11 @@
    "source": [
     "import autogen\n",
     "\n",
-    "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\"\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = \"yourapikey\"\n",
     "\n",
     "llm_config = {\n",
     "    \"model\": \"gemini-1.5-pro\",  # Specify your desired Gemini model\n",
-    "    \"api_key\": \"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\",  # Optional if using default authentication\n",
+    "    \"api_key\": \"yourapikey\",  # Optional if using default authentication\n",
     "    \"api_type\": \"google\"\n",
     "}\n",
     "\n",
@@ -1080,7 +1080,7 @@
     "from tavily import TavilyClient\n",
     "\n",
     "# Set up API keys.\n",
-    "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\"\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = \"yourapikey\"\n",
     "\n",
     "# Initialize the Travily client for web search.\n",
     "travily = TavilyClient(api_key=\"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\")\n",
@@ -1292,7 +1292,7 @@
     "\n",
     "llm_config = {\n",
     "    \"model\": \"gemini-1.5-pro\",  # Specify your desired Gemini model\n",
-    "    \"api_key\": \"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\",  # Optional if using default authentication\n",
+    "    \"api_key\": \"yourapikey\",  # Optional if using default authentication\n",
     "    \"api_type\": \"google\"\n",
     "}\n",
     "\n",
@@ -1372,7 +1372,7 @@
    "source": [
     "llm_config = {\n",
     "    \"model\": \"gemini-2.0-flash\",  # Specify your desired Gemini model\n",
-    "    \"api_key\": \"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\",  # Optional if using default authentication\n",
+    "    \"api_key\": \"yourapikey\",  # Optional if using default authentication\n",
     "    \"api_type\": \"google\"\n",
     "}"
    ]
@@ -1922,7 +1922,7 @@
    "source": [
     "llm_config = {\n",
     "    \"model\": \"gemini-2.0-flash\",  # Specify your desired Gemini model\n",
-    "    \"api_key\": \"AIzaSyCpWj5A1LrMmAp8uS7fgIS0rqQdfFSw5uM\",  # Optional if using default authentication\n",
+    "    \"api_key\": \"yourapikey\",  # Optional if using default authentication\n",
     "    \"api_type\": \"google\"\n",
     "}"
    ]
